books/projects/rac/tests/yaml_test/arithmetics/div-assign.ref.stderr
div-assign.cpp:5 (5-6): syntax error, unexpected '='
  5 |   a /= 2;
    |      ^
